Fix radio filter display on ios

--- a/src/components/RadioFilter/styles.sass
+++ b/src/components/RadioFilter/styles.sass
@@ -13,6 +13,7 @@
     background-color: $background-grey
 
   li
+    display: flex
     overflow: hidden
     border-right: 1px solid white
     margin-right: -1px
@@ -80,5 +81,5 @@
     justify-content: center
     align-items: center
     padding: 8px 10px
-    height: 100%
+    width: 100%
     cursor: pointer
